force-app/main/default/objects/InterviewParticipant__c/InterviewParticipant__c.object-meta.xml
<CustomObject>
    <label>InterviewParticipant</label>
    <nameField>
        <displayFormat>SF-Candidate-{00000}</displayFormat>
        <label>InterviewParticipant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InterviewParticipant</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>