force-app/main/default/objects/InterviewParticipant__c/fields/Available_Till__c.field-meta.xml
<CustomField>
    <fullName>Available_Till__c</fullName>
    <label>Available Till</label>
    <type>DateTime</type>
</CustomField>