force-app/main/default/objects/InterviewParticipant__c/fields/InteractionPlan__c.field-meta.xml
<CustomField>
    <fullName>InteractionPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InteractionPlan</label>
    <referenceTo>InteractionPlan__c</referenceTo>
    <relationshipLabel>InterviewParticipant</relationshipLabel>
    <relationshipName>InterviewParticipant</relationshipName>
    <type>Lookup</type>
</CustomField>