force-app/main/default/objects/InterviewParticipant__c/fields/InterviewEvent__c.field-meta.xml
<CustomField>
    <fullName>InterviewEvent__c</fullName>
    <label>Interview Event</label>
    <referenceTo>InterviewEvent__c</referenceTo>
    <relationshipLabel>Interview Participants</relationshipLabel>
    <relationshipName>InterviewParticipant</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>